/*DROP REFERENCES*/
ALTER TABLE TELEFONES_ALUNOS
DROP CONSTRAINT TELEFONE_ALUNO_FK;

ALTER TABLE ALUNOS_OFERTAS
DROP CONSTRAINT ALUNOS_ALUNO_FK;

ALTER TABLE ALUNOS_OFERTAS
DROP CONSTRAINT ALUNOS_OFERTA_FK;

ALTER TABLE OFERTAS
DROP CONSTRAINT OFERTAS_PROFESSOR_FK;

ALTER TABLE OFERTAS
DROP CONSTRAINT OFERTAS_DISCIPLINAS_FK;

ALTER TABLE DISCIPLINAS
DROP CONSTRAINT DISCIPLINAS_DEPENDENCIA_FK;

/*DROP INDEXES*/
DROP INDEX ALUNOS_NOME_IDX;
DROP INDEX OFERTAS_DIA_IDX;
DROP INDEX DISCIPLINA_NOME_IDX;
DROP INDEX PROFESSORES_NOME_IDX;

/*DROP TABLES*/
DROP TABLE ALUNOS_OFERTAS;
DROP TABLE OFERTAS;
DROP TABLE DISCIPLINAS;
DROP TABLE TELEFONES_ALUNOS;
DROP TABLE ALUNOS;
DROP TABLE PROFESSORES;

/*DROP VIEWS*/
DROP VIEW DISCIPLINAS_PROFESSOR;
DROP VIEW ALUNOS_MATRICULADOS;

/*DROP SEQUENCES*/
DROP SEQUENCE DISCIPLINAS_SEQ;
DROP SEQUENCE OFERTAS_SEQ;

/*CREATE TABLES*/
CREATE TABLE TELEFONES(
    TELEFONE VARCHAR2(11) NOT NULL,
    MATRICULA NUMERIC NOT NULL
);

CREATE TABLE ALUNOS(
    MATRICULA NUMERIC NOT NULL,
    NOME VARCHAR2(100) NOT NULL,
    DATA_NASCIMENTO DATE NOT NULL
);

CREATE TABLE PROFESSORES(
    MATRICULA NUMERIC(5) NOT NULL,
    NOME VARCHAR2(100) NOT NULL,
    FORMACAO VARCHAR2(100) NOT NULL
);

CREATE TABLE DISCIPLINAS(
    CODIGO_DISCIPLINA NUMERIC NOT NULL,
    NOME_DISCIPLINA VARCHAR2(100) NOT NULL,
    CARGA_HORARIA NUMERIC(3) NOT NULL,
    EMENTA VARCHAR2(4000) NOT NULL,
    CODIGO_DISCIPLINA_DEPENDENCIA NUMERIC
);

CREATE TABLE OFERTAS(
    CODIGO_OFERTA NUMERIC NOT NULL,
    HORARIO_INICIAL TIMESTAMP NOT NULL,
    HORARIO_FINAL TIMESTAMP NOT NULL,
    DIA_SEMANA VARCHAR2(20) NOT NULL,
    MATRICULA NUMERIC(5) NOT NULL,
    CODIGO_DISCIPLINA NUMERIC NOT NULL
);

CREATE TABLE ALUNOS_OFERTAS(
    MATRICULA NUMERIC NOT NULL,
    CODIGO_OFERTA NUMERIC NOT NULL,
    LIMITE_ALUNOS NUMERIC NOT NULL,
    SEMESTRE VARCHAR2(10),
    DATA_INICIAL DATE NOT NULL,
    DATA_FINAL DATE NOT NULL
);

/*CREATE SEQUENCES*/
CREATE SEQUENCE DISCIPLINAS_SEQ;
CREATE SEQUENCE OFERTAS_SEQ;

/*ADD COLUMNS*/
ALTER TABLE ALUNOS ADD EMAIL VARCHAR2(200);
ALTER TABLE ALUNOS ADD CPF VARCHAR2(11);
ALTER TABLE PROFESSORES ADD CONTATO VARCHAR2(200);
ALTER TABLE OFERTAS ADD DATA_CRIACAO DATE;

/*MODIFY COLUMNS*/
ALTER TABLE ALUNOS MODIFY EMAIL VARCHAR2(250);
ALTER TABLE OFERTAS MODIFY DATA_CRIACAO DATE DEFAULT SYSDATE NOT NULL;

/*RENAME TABLES*/
ALTER TABLE TELEFONES RENAME TO TELEFONES_ALUNOS;

/*RENAME COLUMNS*/
ALTER TABLE ALUNOS RENAME COLUMN MATRICULA TO MATRICULA_ALUNO;
ALTER TABLE ALUNOS RENAME COLUMN NOME TO NOME_ALUNO;
ALTER TABLE PROFESSORES RENAME COLUMN MATRICULA TO MATRICULA_PROFESSOR;
ALTER TABLE PROFESSORES RENAME COLUMN NOME TO NOME_PROFESSOR;
ALTER TABLE DISCIPLINAS RENAME COLUMN EMENTA TO EMENTA_DISCIPLINA;
ALTER TABLE ALUNOS_OFERTAS RENAME COLUMN MATRICULA TO MATRICULA_ALUNO;
ALTER TABLE OFERTAS RENAME COLUMN MATRICULA TO MATRICULA_PROFESSOR;
ALTER TABLE TELEFONES_ALUNOS RENAME COLUMN MATRICULA TO MATRICULA_ALUNO;

/*CREATE INDEXES*/
CREATE INDEX ALUNOS_NOME_IDX      ON ALUNOS (NOME_ALUNO);
CREATE INDEX OFERTAS_DIA_IDX      ON OFERTAS (DIA_SEMANA);
CREATE INDEX DISCIPLINA_NOME_IDX  ON DISCIPLINAS (NOME_DISCIPLINA);
CREATE INDEX PROFESSORES_NOME_IDX ON PROFESSORES (NOME_PROFESSOR);

/*CREATE VIEWS*/
CREATE VIEW DISCIPLINAS_PROFESSOR AS (
    SELECT P.NOME_PROFESSOR AS PROFESSOR
         , P.FORMACAO
         , D.CODIGO_DISCIPLINA
         , D.NOME_DISCIPLINA
         , D.CARGA_HORARIA
      FROM OFERTAS O
      INNER JOIN PROFESSORES P
      ON O.MATRICULA_PROFESSOR = P.MATRICULA_PROFESSOR
      INNER JOIN DISCIPLINAS D
      ON O.CODIGO_DISCIPLINA = D.CODIGO_DISCIPLINA
);

CREATE VIEW ALUNOS_MATRICULADOS AS (
    SELECT A.MATRICULA_ALUNO
         , A.NOME_ALUNO AS ALUNO
         , AO.SEMESTRE
         , O.HORARIO_INICIAL
         , O.HORARIO_FINAL
         , O.DIA_SEMANA
         , P.NOME_PROFESSOR AS PROFESSOR
         , D.NOME_DISCIPLINA
      FROM ALUNOS_OFERTAS AO
      INNER JOIN ALUNOS A
      ON AO.MATRICULA_ALUNO = A.MATRICULA_ALUNO
      INNER JOIN OFERTAS O
      ON AO.CODIGO_OFERTA = O.CODIGO_OFERTA
      INNER JOIN PROFESSORES P 
      ON O.MATRICULA_PROFESSOR = P.MATRICULA_PROFESSOR
      INNER JOIN DISCIPLINAS D
      ON O.CODIGO_DISCIPLINA = D.CODIGO_DISCIPLINA
);

/*DROP COLUMNS*/
ALTER TABLE PROFESSORES DROP COLUMN CONTATO;
ALTER TABLE ALUNOS DROP COLUMN EMAIL;
ALTER TABLE ALUNOS DROP COLUMN CPF;

/*ADD PRIMARY KEY*/
ALTER TABLE TELEFONES_ALUNOS ADD PRIMARY KEY (TELEFONE);
ALTER TABLE ALUNOS ADD PRIMARY KEY (MATRICULA_ALUNO);
ALTER TABLE OFERTAS ADD PRIMARY KEY (CODIGO_OFERTA);
ALTER TABLE ALUNOS_OFERTAS ADD PRIMARY KEY (MATRICULA_ALUNO, CODIGO_OFERTA);
ALTER TABLE PROFESSORES ADD PRIMARY KEY (MATRICULA_PROFESSOR);
ALTER TABLE DISCIPLINAS ADD PRIMARY KEY (CODIGO_DISCIPLINA);

/*ADD CONSTRAINT FOREIGN KEY*/
ALTER TABLE TELEFONES_ALUNOS
ADD CONSTRAINT TELEFONE_ALUNO_FK
    FOREIGN KEY (MATRICULA_ALUNO)
    REFERENCES ALUNOS (MATRICULA_ALUNO);

ALTER TABLE ALUNOS_OFERTAS
ADD CONSTRAINT ALUNOS_ALUNO_FK
    FOREIGN KEY (MATRICULA_ALUNO)
    REFERENCES ALUNOS (MATRICULA_ALUNO);

ALTER TABLE ALUNOS_OFERTAS
ADD CONSTRAINT ALUNOS_OFERTA_FK
    FOREIGN KEY (CODIGO_OFERTA)
    REFERENCES OFERTAS (CODIGO_OFERTA);

ALTER TABLE OFERTAS
ADD CONSTRAINT OFERTAS_PROFESSOR_FK
    FOREIGN KEY (MATRICULA_PROFESSOR)
    REFERENCES PROFESSORES (MATRICULA_PROFESSOR);

ALTER TABLE OFERTAS
ADD CONSTRAINT OFERTAS_DISCIPLINAS_FK
    FOREIGN KEY (CODIGO_DISCIPLINA)
    REFERENCES DISCIPLINAS (CODIGO_DISCIPLINA);

ALTER TABLE DISCIPLINAS
ADD CONSTRAINT DISCIPLINAS_DEPENDENCIA_FK
    FOREIGN KEY (CODIGO_DISCIPLINA_DEPENDENCIA)
    REFERENCES DISCIPLINAS (CODIGO_DISCIPLINA);