erDiagram
    ALUNOS ||--o{ MATRICULAS : faz
    DISCIPLINAS ||--o{ MATRICULAS : recebe
    ALUNOS {
        int matricula PK
        string nome
    }
    DISCIPLINAS {
        int codigo PK
        string nome
    }
    MATRICULAS {
        int matricula PK "FK aluno"
        int codigo PK "FK disciplina"
        string periodo
    }
